<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">MyFirstApp</string>
    <string name="hello">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ref">This is reference</string>
	<string name="total">Your total is 0</string>
	<string name="add">Add</string>
	<string name="sub">Sub</string>
	<string name="editText1">Type a Command</string>
	<string name="invalid">invalid</string>
	<string name="button1">Button</string>
	<string name="tryCommand">Try Command</string>
</resources>
