<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<EditText
	    android:id="@+id/etCommands"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/editText1"
	    android:inputType="textPassword"
	     />

	<LinearLayout
	    android:weightSum="100"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	<Button
	    android:layout_weight="50"
	    android:id="@+id/bResults"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/button1" />

	<ToggleButton
	    android:id="@+id/tbPassword"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="50"
	    android:checked="true"
	    android:paddingTop="12dp"
	    android:text="@string/tryCommand" />
	
	</LinearLayout>
	<TextView
	    android:id="@+id/tvResults"
	    android:gravity="center"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/invalid" />
    
</LinearLayout>
