<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/weather_icon"
    tools:context="com.example.myfirstapp.MyActivity" >

       <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="45sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/tvDisplay"
        />
       <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:id="@+id/bAdd"
        />

       <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sub"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:id="@+id/bSub"
        />
       "
"

</LinearLayout>
